# mempool-orchestrator

./: .env.example  .gitignore  Justfile  LICENSE  README.md  dashboard.py  debug_db.py  docker-compose.yml  pyproject.toml
.agent/skills/: 00_staff_persona.md
backend/: Dockerfile  mempool_data.duckdb  pyproject.toml
backend/scripts/: 01_add_pool_and_projections.sql  backfill_blocks.py
backend/src/: config.py  schemas.py  strategies.py
backend/src/api/: main.py  queries.py  schemas.py
backend/src/common/: kafka_producer.py
backend/src/core/: config.py
backend/src/domain/: schemas.py
backend/src/infrastructure/database/: models.py  session.py
backend/src/infrastructure/messaging/: producer.py
backend/src/ingestors/: mempool_api.py  mempool_ws.py
backend/src/orchestrator/: __init__.py  main.py  schemas.py  tools.py  watchlist_monitor.py
backend/src/storage/: agent_history.py  duckdb_consumer.py  watchlist.py
backend/src/strategies/: advisors.py
backend/src/workers/: backfill.py  block_fetcher.py  ingestor.py  state_consumer.py  tx_hunter.py
backend/tests/: test_advisors.py  test_agent_history.py  test_api.py  test_api_server.py  test_backfill.py  test_block_fetcher.py  test_config.py  test_ingestor.py  test_kafka_producer.py  test_orchestrator.py  test_queries.py  test_schemas.py  test_state_consumer.py  test_strategies.py  test_tx_hunter.py  test_watchlist.py
data/history/: agent_history.duckdb.wal
docs/: architecture.md  data_dictionary.md  decisions.md  project-journal.md  strategy.md
frontend/: Dockerfile  package-lock.json  package.json  pyproject.toml
frontend/app/: globals.css  layout.tsx  main.py  page.tsx  providers.tsx
frontend/components/dashboard/: advisors-panel.tsx  block-weight-chart.tsx  fee-histogram.tsx  header.tsx  kpi-cards.tsx  section-headers.tsx  status-bar.tsx  strategy-panel.tsx  transactions-table.tsx
frontend/hooks/: use-fee-distribution.ts  use-mempool-stats.ts  use-orchestrator-status.ts  use-recent-blocks.ts  use-translations.ts  use-watchlist.ts
frontend/lib/: api.ts  types.ts
frontend/lib/i18n/: context.tsx  en.ts  es.ts
infra/: docker-compose.yml
scripts/: backfill_history.py  backtest.py  debug_db.py
src/: config.py  schemas.py
src/common/: kafka_producer.py
tests/: test_config.py  test_schemas.py
(+10 files in other folders)
