[project]
name = "mempool-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.13.0",
    "duckdb>=1.4.3",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "ollama>=0.5.1",
    "pandas>=3.0.0",
    "pydantic-ai>=0.3.1",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "respx>=0.22.0",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "fakeredis>=2.33.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
