[project]
name = "mempool-orchestrator"
version = "0.2.0"
description = "Bitcoin mempool analytics — Event-Driven Architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
