[project]
name = "mempool-frontend"
version = "0.1.0"
description = "Mempool Orchestrator Dashboard UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.38.0",
    "plotly>=6.0.0",
    "pandas>=2.0.0,<3.0.0",
    "duckdb>=1.4.3",
    "python-dotenv>=1.1.0",
    "pydantic>=2.0.0",
]
